# payment-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.db
.github/workflows/: build.yaml  tollgate.yaml
app/: config.py  database.py  events.py  kafka_consumer.py  kafka_producer.py  main.py  models.py  schemas.py
app/routers/: payments.py
tests/: conftest.py  test_payments.py  test_processing.py
